# hacher-news

./: .env.example  .gitignore  AGENTS.md  README.md  Taskfile.yml  alembic.ini  com.korney.hndigest.plist  main.py  pyproject.toml  run.sh
alembic/: env.py
alembic/versions/: 1b918fe9f3b5_initial_posts_and_user_post.py
hn_digest/: __init__.py  __main__.py  config.py  curation.py  dedup.py  formatting.py  logging_setup.py  models.py  pipeline.py  scheduling.py  sources.py  telegram.py  usage_report.py
hn_digest/bot/: __init__.py  __main__.py  access.py  app.py  callbacks.py  handlers.py  keyboards.py  main.py  render.py
hn_digest/db/: __init__.py  engine.py  models.py  repo.py
tests/: test_bot_access.py  test_bot_callbacks.py  test_bot_render.py  test_core.py  test_notification.py  test_telegram_client.py
