[project]
name = "hn-digest"
version = "0.2.0"
description = "Утренний IT-дайджест из Hacker News в Telegram (курация через Claude Code)"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "aiogram>=3",
    "fastapi>=0.110",
    "sqlalchemy[asyncio]>=2",
    "asyncpg>=0.29",
    "alembic>=1.13",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "uvicorn>=0.30",
    "fastapi-cli>=0.0.5",
    "fastapi-cloud-cli",
    "ruff>=0.9",
    "ty>=0.0.1a1",
]

[tool.uv]
# Это приложение, а не библиотека — не собираем/не устанавливаем сам проект,
# uv только поднимает окружение с зависимостями. Запуск: `uv run python -m hn_digest`.
package = false

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py310"
line-length = 100
# Автогенерируемые миграции Alembic не линтуем.
extend-exclude = ["alembic/versions"]

[tool.ruff.lint]
# E/W — pycodestyle, F — pyflakes, I — isort, UP — pyupgrade,
# B — bugbear, SIM — simplify, C4 — comprehensions.
select = ["E", "W", "F", "I", "UP", "B", "SIM", "C4"]

[tool.ty.environment]
python-version = "3.10"
